# xenium-spatial

./: .gitignore  LICENSE  QUICKSTART_MAC.md  README.md  install_mac.sh  pyproject.toml  requirements.txt  start_app.command
.github/workflows/: ci.yml
app/: app.py  pipeline.py  styles.css  ui_utils.py
app/.streamlit/: config.toml
app/pages/: 10_gene_focus.py  1_study_setup.py  2_consensus_panel.py  2_roi_manager.py  3_roi_manager.py  3_sample_pca.py  4_leiden_optimizer.py  4_sample_pca.py  5_clusters.py  5_leiden_optimizer.py  6_clusters.py  6_composition.py  7_composition.py  7_dge.py  8_dge.py  8_spatial.py  9_gene_focus.py  9_spatial.py
scripts/: run_sample_pca.py
src/xenium_spatial/: __init__.py  cell_clustering.py  composition.py  figure_export.py  figure_style.py  gene_focus.py  leiden_optimizer.py  multislide_loader.py  panel_registry.py  pseudobulk_dge.py  roi_selector.py  sample_pca.py  spatial.py  transform.py  xenium_loader.py
tests/: test_composition.py  test_consensus_panel.py  test_elbow.py  test_figure_export.py  test_gene_focus.py  test_manifest.py  test_preprocess_pcs.py  test_pseudobulk_dge.py  test_sample_pca_batch.py  test_spatial.py  test_transform.py
