[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xenium-spatial-analysis"
version = "0.1.0"
description = "End-to-end Xenium spatial pipeline: panel harmonisation, ROI selection, sample-level pseudobulk PCA, Leiden resolution optimisation, and cell-level quantification (clustering, composition, pseudobulk DGE, spatial niches, single-gene focus)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexander Jais" }]
keywords = ["xenium", "spatial-transcriptomics", "single-cell", "pca", "leiden", "scanpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Core stack — the sample-PCA workflow runs with just these.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "scikit-learn>=1.3",
    "anndata>=0.10",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
# Single-cell clustering (🔎 Leiden Optimizer) — heavier, imported lazily.
clustering = [
    "scanpy>=1.10",
    "igraph>=0.11",
    "leidenalg>=0.10",
    "harmonypy>=0.0.9",
]
# Streamlit web interface.
app = [
    "streamlit>=1.35",
    "plotly>=5.20",
]
# Everything, for development.
dev = [
    "xenium-spatial-analysis[clustering,app]",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/AlexanderJais/xenium-spatial-analysis"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
